# shopping-agent

./: README.md  pyproject.toml
.repogen/: manifest.json
docker/dev/: Dockerfile  README.md  compose.dev.yaml  environment.yml
docker/llm/: README.md  compose.vllm.yaml
src/agent_app/: cli.py  core.py
src/shopping_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_smoke.py
